# zhr

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  zhr.sln  zhr.vcxproj  zhr_lib.vcxproj  zhrf.cpp
Debug/output/: zhr_lib.lib
Distrib/Windows_AMD64/lib/Debug/: lib_zhr.lib
Distrib/Windows_AMD64/lib/Release/: lib_zhr.lib
Release/output/: zhr_lib.lib
home_dir/: run_zhr_term.sh
zhr_lib/: CMakeLists.txt  build.sh  vs-group.cmake  zhr_lib.vcxproj  zhr_lib.vcxproj.filters  zhrf_basis.cpp  zhrf_basis.h
zhr_lib/Debug/output/: zhr_lib.lib
zhr_lib/Distrib/Windows_AMD64/lib/Debug/: lib_zhr.lib
zhr_lib/Distrib/Windows_AMD64/lib/Release/: lib_zhr.lib
zhr_lib/Includes/: zhrf_basis.h  zhrf_lib.h  zhrf_system.h
zhr_lib/Release/output/: zhr_lib.lib
zhr_lib/Sources/: zhrf_basis.cpp  zhrf_files.cpp  zhrf_lib.cpp  zhrf_strings.cpp  zhrf_system.cpp  zhrf_time.cpp
